--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation "com.github.bumptech.glide:glide:4.16.0"
+
+    implementation 'org.modelmapper:modelmapper:3.2.0'
+
 }
