--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.16.0"
 
     implementation 'org.modelmapper:modelmapper:3.2.0'
-
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
